--- a/.env.example
+++ b/.env.example
@@ -7,20 +7,15 @@ URL_SERVER=
 HOSTNAME_CLIENT=
 PORT_CLIENT=
 URL_CLIENT=
+
+PORT_WEBSOCKET=
 # <-
 
-
-# -> db (mongo)
-DB_MONGO_DB=
-URL_MONGO_DB=
-# <-
 
 
 # _> expose to client (vue)
 VUE_APP_URL_SERVER=$URL_SERVER
 VUE_APP_URL_CLIENT=$URL_CLIENT
+VUE_APP_PORT_WEBSOCKET=$PORT_WEBSOCKET
 # <-
 
-# -> auth
-ACCESS_TOKEN=
-# <-
