--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "three": "^0.120.1",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.5",
+    "vue-native-websocket": "^2.0.14",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
