--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
 		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
 		"mathjs": "^7.2.0",
-		"mongodb": "^3.6.2"
+		"mongodb": "^3.6.2",
+		"ws": "^7.3.1"
 	},
 	"devDependencies": {
 		"chai": "^4.2.0",
