--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,11 @@
     "jpeg-js": "^0.4.2",
     "nanoevents": "^5.1.8",
     "quasar": "^1.0.0",
+    "socket.io-client": "^2.3.1",
     "three": "^0.120.1",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.5",
-    "vue-native-websocket": "^2.0.14",
+    "vue-socket.io-extended": "^4.0.5",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
