--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
 		"express": "^4.17.1",
 		"mathjs": "^7.2.0",
 		"mongodb": "^3.6.2",
-		"ws": "^7.3.1"
+		"socket.io": "^2.3.0"
 	},
 	"devDependencies": {
 		"chai": "^4.2.0",
