--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.5",
     "vue-socket.io-extended": "^4.0.5",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
