--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "google-protobuf": "^3.13.0",
     "jpeg-js": "^0.4.2",
     "nanoevents": "^5.1.8",
+    "path": "^0.12.7",
     "quasar": "^1.0.0",
     "socket.io-client": "^2.3.1",
     "three": "^0.120.1",
