--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "google-protobuf": "^3.13.0",
     "jpeg-js": "^0.4.2",
+    "mathjs": "^8.0.1",
     "nanoevents": "^5.1.8",
     "path": "^0.12.7",
     "quasar": "^1.0.0",
