--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "three": "^0.120.1",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.5",
+    "vue-router": "^3.4.9",
     "vue-socket.io-extended": "^4.0.5",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.1.0"
