Big refractor: Making app as single port (before 3 ports)

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,11 @@
-NODE_ENV=
+NODE_ENV=local
 
-# -> urls dev
-HOSTNAME_SERVER=
-PORT_SERVER=
-URL_SERVER=
-HOSTNAME_CLIENT=
-PORT_CLIENT=
-URL_CLIENT=
+HOSTNAME=localhost
+PORT=9000
+URL=http://$HOSTNAME:$PORT
 
-PORT_WEBSOCKET=
-# <-
-
-
-
-# _> expose to client (vue)
-VUE_APP_URL_SERVER=$URL_SERVER
-VUE_APP_URL_CLIENT=$URL_CLIENT
-VUE_APP_PORT_WEBSOCKET=$PORT_WEBSOCKET
+# -> expose to client (vue)
+VUE_APP_URL=$URL
+VUE_APP_PORT=$PORT
 # <-
 
