--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,23 @@
 {
-	"name": "big-viz-viewer",
-	"version": "1.0.0",
+	"name": "big-viz-server",
+	"version": "1.0.1",
 	"description": "",
 	"main": "index.js",
 	"dependencies": {
 		"axios": "^0.21.1",
+		"connect-history-api-fallback": "^1.6.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"dotenv-expand": "^5.1.0",
-		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
-		"mathjs": "^9.0.0",
-		"mongodb": "^3.6.3",
-		"socket.io": "^3.1.0"
+		"socket.io": "^4.0.0"
 	},
 	"devDependencies": {
-		"chai": "^4.2.0",
-		"nodemon": "^2.0.7",
-		"mocha": "^8.2.1"
+		"nodemon": "^2.0.7"
 	},
 	"scripts": {
 		"dev": "nodemon --ignore static/ index.js",
-		"start": "node index.js",
-		"test": "mocha --reporter spec"
+		"start": "node index.js"
 	},
 	"author": "Armen Avetisyan"
 }
