--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,9 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"dotenv-expand": "^5.1.0",
+		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
-		"socket.io": "^4.0.0"
+		"socket.io": "^4.0.1"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.7"
