Renaming reserved env variable 'HOSTNAME'

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ SERVER_PORT=9000
 SERVER_URL=http://$SERVER_HOSTNAME:$SERVER_PORT
 
 # -> expose to client (vue)
-VUE_APP_URL=$SERVER_URL
+VUE_APP_URL=$SERVER_HOSTNAME
 VUE_APP_PORT=$SERVER_PORT
 # <-
 
