--- a/client/package.json
+++ b/client/package.json
@@ -8,38 +8,32 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@quasar/extras": "^1.9.20",
-    "axios": "^0.21.1",
-    "core-js": "^3.9.1",
-    "google-protobuf": "^3.15.6",
-    "jpeg-js": "^0.4.3",
-    "mathjs": "^9.3.0",
-    "nanoevents": "^5.1.13",
-    "node-sass": "^6.0.1",
-    "path": "^0.12.7",
-    "quasar": "^1.15.7",
-    "sass-loader": "^10.1.1",
-    "socket.io-client": "^4.0.1",
-    "three": "^0.126.1",
-    "vue": "^2.6.12",
-    "vue-class-component": "^7.2.6",
-    "vue-router": "^3.5.1",
-    "vue-socket.io-extended": "^4.0.8",
-    "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "@quasar/extras": "^1.16.2",
+    "axios": "^1.3.5",
+    "mathjs": "^11.8.0",
+    "mitt": "^3.0.0",
+    "pinia": "^2.0.0-rc.10",
+    "pinia-plugin-persistedstate": "^3.1.0",
+    "quasar": "^2.7.5",
+    "socket.io-client": "^4.6.1",
+    "three": "^0.151.3",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3",
+    "vue-socket.io-extended": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.5",
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-eslint": "^4.5.12",
-    "@vue/cli-service": "^4.5.12",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-transform-imports": "2.0.0",
-    "eslint": "^7.22.0",
-    "eslint-plugin-vue": "^7.8.0",
-    "vue-cli-plugin-quasar": "~3.0.1",
-    "vue-template-compiler": "^2.6.12"
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "eslint": "^8.38.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.2.0",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
+    "vue-cli-plugin-quasar": "^5.0.2"
   },
   "browserslist": [
     "since 2015"
