--- a/client/package.json
+++ b/client/package.json
@@ -8,17 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.2",
-    "axios": "^1.3.5",
-    "mathjs": "^11.8.0",
-    "mitt": "^3.0.0",
-    "pinia": "^2.0.0-rc.10",
-    "pinia-plugin-persistedstate": "^3.1.0",
-    "quasar": "^2.7.5",
-    "socket.io-client": "^4.6.1",
+    "@quasar/extras": "^1.16.6",
+    "axios": "^1.5.0",
+    "mathjs": "^11.11.1",
+    "mitt": "^3.0.1",
+    "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "quasar": "^2.12.7",
+    "socket.io-client": "^4.7.2",
     "three": "^0.156.1",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
     "vue-socket.io-extended": "^4.2.0"
   },
   "devDependencies": {
@@ -26,13 +26,13 @@
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-standard": "^8.0.1",
-    "eslint": "^8.38.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint": "^8.49.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.2.0",
-    "sass": "^1.62.0",
-    "sass-loader": "^13.2.2",
+    "eslint-plugin-vue": "^9.17.0",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.2",
     "vue-cli-plugin-quasar": "^5.0.2"
   },
   "browserslist": [
